# beshell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md  embed-files.cmake  fs-root.img  library.properties  platform.txt
docs/: build-on-linux.md  fs.md
docs/graph/: ModuleLoader.drawio  NativeObject.drawio
docs/lv/: font.md
filesystem/: app-partition-size.js  dispense-to-beconsole.js  mk-firmware-json.js  mk-partitions.js  partitions-16MB.csv  partitions-4MB.csv  partitions-8MB.csv
pc/: .gitignore  CMakeLists.txt  README.md  beshell.code-workspace  demo.js  demo2.js  main.cpp  readme.md  test-Protocal.cpp  test.js
pc/demo/: Demo.cpp  Demo.hpp  DemoModule.cpp  DemoModule.hpp
pc/mklfs/: mklfs.c
pc/src/: main.c  main.cpp  simulate.c
recycle/: driver_camera.c  driver_camera.h  http_server.h
recycle/ws2812b/: WS2812B.cpp
src/: BeShell.cpp  BeShell.h  BeShell.hpp  EventEmitter.cpp  EventEmitter.hpp  JSEngine.cpp  JSEngine.hpp  JSTimer.cpp  JSTimer.hpp  ModuleLoader.cpp  ModuleLoader.hpp  NVS.cpp  NVS.hpp  NativeClass.cpp  NativeClass.hpp  NativeModule.cpp  NativeModule.hpp  NativeObject.cpp  NativeObject.hpp  REPL.cpp  REPL.hpp  beshell.h  debug.c  debug.h  eventloop.c  eventloop.h  http_server.c  include.hpp  js_main_loop.c  js_main_loop.h  lv_conf.h  main.c  malloc_funcs.h  mallocf.c  mallocf.h  nvs.cpp  path.c  path.cpp  path.h  path.hpp  (+19 more)
src/anchor9/: anchor9_lvgl.h
src/basic/: Console.cpp  Console.hpp
src/driver/: DriverModule.cpp  DriverModule.hpp  I2CDevice.cpp  I2CDevice.hpp  SDCard.cpp  SDCard.hpp
src/driver/adc/: CS1237.cpp  CS1237.hpp
src/driver/comm/: PN532-JS.cpp  PN532.cpp
src/driver/disp/: Display.cpp  Display.hpp  RGB565.cpp  RGB565.hpp  ST7701.cpp  ST7701.hpp  ST7789.cpp  ST7789.hpp
src/driver/display/: Bus8080.cpp  Bus8080.hpp  Display.cpp  Display.hpp  Display8080.cpp  Display8080.hpp  DisplayModule.cpp  DisplayModule.hpp  RGB565.cpp  RGB565.hpp  SPIDisplay.cpp  SPIDisplay.hpp  ST7701.cpp  ST7701.hpp
src/driver/input/: GT911.cpp  GT911.hpp  InDevPointer.cpp  InDevPointer.hpp
src/driver/io/: PCA9557.cpp  PCA9557.hpp  TM1650.cpp  TM1650.hpp  TM1652.cpp  TM1652.hpp
src/driver/motion/: TimerStepper.cpp  TimerStepper.hpp
src/driver/sensor/: AHT20.cpp  AHT20.hpp  BMP280.cpp  BMP280.hpp  DS18B20.cpp  DS18B20.hpp  MLX90614.cpp  MLX90614.hpp  TMP117.cpp  TMP117.hpp  VL53L0X.cpp  VL53L0X.hpp  WH4530A.cpp  WH4530A.hpp
src/driver/sys/: DS1307.cpp  DS1307.hpp  SDCard.cpp  SDCard.hpp
src/fs/: FS-JS.cpp  FS.cpp  FS.hpp  FSModule.cpp  FSModule.hpp  FSPartition.cpp  FSPartition.hpp  FSPartitionFlash.cpp  FSPartitionFlash.hpp  FSPartitionRaw.cpp  FSPartitionRaw.hpp  FatFS.cpp  FatFS.hpp  LittleFS.cpp  LittleFS.hpp  RawFS.cpp  RawFS.hpp
src/js/: device.c  device.js  gpio.c  gpio.js  json.c  json.js  mg.c  mg.js  misc.c  misc.js  ota.c  ota.js  telnet.c  telnet.js  wifi.c  wifi.js  wifi.js.h  wifi.js.tpl.h
src/js/bt/: central.c  central.js  peripheral.c  peripheral.js
src/led/rainbow/: led_strip.h  led_strip_timeline.c
src/lv/: Animation.cpp  Animation.hpp  LV.cpp  LV.disp.cpp  LV.font.cpp  LV.hpp  LV.indev.cpp  LVModule.cpp  LVModule.hpp  Style.cpp  Style.hpp  all-widgets.hpp  const.cpp  const.hpp  font.cpp
src/lv/ext/: ColorPicker.cpp  ColorPicker.hpp  Column.cpp  Column.hpp  Rect.cpp  Rect.hpp  Row.cpp  Row.hpp
src/lv/widget/: AnimImg.cpp  AnimImg.hpp  Arc.cpp  Arc.hpp  Bar.cpp  Bar.hpp  Btn.cpp  Btn.hpp  BtnMatrix.cpp  BtnMatrix.hpp  Calendar.cpp  Calendar.hpp  Canvas.cpp  Canvas.hpp  Chart.cpp  Chart.hpp  Checkbox.cpp  Checkbox.hpp  Dropdown.cpp  Dropdown.hpp  Gif.cpp  Gif.hpp  Img.cpp  Img.hpp  ImgBtn.cpp  ImgBtn.hpp  Keyboard.cpp  Keyboard.hpp  Label.cpp  Label.hpp  Led.cpp  Led.hpp  Line.cpp  Line.hpp  List.cpp  List.hpp  Menu.cpp  Menu.hpp  MsgBox.cpp  MsgBox.hpp  (+30 more)
src/lv/widgets/: AnimImg.cpp  AnimImg.hpp  Arc.cpp  Arc.hpp  Bar.cpp  Bar.hpp  Btn.cpp  Btn.hpp  BtnMatrix.cpp  BtnMatrix.hpp  Calendar.cpp  Calendar.hpp  Canvas.cpp  Canvas.hpp  Chart.cpp  Chart.hpp  Checkbox.cpp  Checkbox.hpp  Dropdown.cpp  Dropdown.hpp  Img.cpp  Img.hpp  ImgBtn.cpp  Label.cpp  (+40 more)
src/mesh/: EspBleMesh.c  EspBleMesh.h
src/mg/: Client-WS.cpp  Client.cpp  Client.hpp  HTTPRequest.cpp  HTTPRequest.hpp  Mg.cpp  Mg.hpp  MgModule.cpp  MgModule.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp
src/misc/: Ease.cpp  Ease.hpp
src/module/: Console.cpp  Console.hpp  ConsoleModule.cpp  ConsoleModule.hpp  DeviceModule.cpp  DeviceModule.hpp  DeviceTree.cpp  DeviceTree.hpp  ESModule.cpp  ESModule.hpp  FSModule.cpp  FSModule.hpp  Flash.cpp  Flash.hpp  GPIO.cpp  GPIO.hpp  GPIOModule.cpp  GPIOModule.hpp  ModuleLoader.cpp  ModuleLoader.hpp  NVS.cpp  NVS.hpp  NVSModule.cpp  NVSModule.hpp  NativeModule.cpp  NativeModule.hpp  OTA.cpp  OTA.hpp  Path.cpp  Path.hpp  PathModule.cpp  PathModule.hpp  Process.cpp  Process.hpp  ProcessModule.cpp  ProcessModule.hpp  WiFi.cpp  WiFi.hpp  WiFiModule.cpp  WiFiModule.hpp
src/modules/: ESModule.cpp  ESModule.hpp  ModuleLoader.cpp  ModuleLoader.hpp  Path.cpp  js_class_utils.h  module_bt.c  module_fs.c  module_fs.h  module_gpio.c  module_gpio.h  module_nvs.c  module_process.c  module_socks.c  module_socks.h  module_utils.c  module_utils.h  module_wifi.c  module_wifi.h
src/repl/: REPL.cpp  REPL.hpp
src/serial/: I2C.cpp  I2C.hpp  SerialModule.cpp  SerialModule.hpp
src/telnet/: Protocal.cpp  Protocal.hpp  Telnet.cpp  Telnet.hpp  TelnetBLE.cpp  TelnetBLE.hpp  TelnetBT.cpp  TelnetBT.hpp  TelnetCDC.cpp  TelnetCDC.hpp  TelnetChannel.cpp  TelnetChannel.hpp  TelnetChannelNClass.cpp  TelnetChannelNClass.hpp  TelnetModule.cpp  TelnetModule.hpp  TelnetSerial.cpp  TelnetSerial.hpp  TelnetStdIO.cpp  TelnetStdIO.hpp  TelnetWS.cpp  TelnetWS.hpp  gatt_server.c  gatt_server.h  module_telnet.c  module_telnet.h  telnet_protocal.c  telnet_protocal.cpp  telnet_protocal.h  telnet_protocal.hpp  telnet_protocal_0519.c  telnet_protocal_0519.h  telnet_serial.c  telnet_serial.cpp  telnet_serial.h  telnet_ws.c  telnet_ws.h
tools/: js-to-c.js
tools/bmp2raw/: bmp2raw.js
tools/test/: camera-tcp-stream.js
(+125 files in other folders)
